# sdna_lite

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_in_container.sh  gcc_ubuntu_compiler_output.txt  gen_cmakelists.py  lite_clone.bat  mingw_w64_gcc_compiler_output.txt  ninja_gcc_compiler_output.txt
arcscripts/: environment_test.py  fcdiff.py
installerbits/advanced/: sdna.aip
sDNA/muparser/drop/include/: stdafx.h
sDNA/muparser/drop/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp
sDNA/sdna_vs2008/: CMakeLists.txt  calc_output_code.cpp  calculation.cpp  calculation.h  calculationbase.h  config_string_parser.h  dataacquisitionstrategy.h  dijkstra.cpp  dllmain.cpp  edge.cpp  edge.h  geos_sdna_wrapper.cpp  geos_sdna_wrapper.h  interface_funcs.cpp  metricevaluator.cpp  metricevaluator.h  prepareoperations.cpp  prepareoperations.h  random.cpp  random.h  sDNACalculationFactory.cpp  sDNACalculationFactory.h  sdna.h  sdna_arrays.h  sdna_geometry_collections.cpp  sdna_geometry_collections.h  sdna_output_utils.h  sdna_spatial_accumulators.h  sdna_vs2008.sln  sdna_vs2008.vcproj  stdafx.cpp  stdafx.h  tables.h  targetver.h  unique_id.h  unit_tests.cpp  version_template.h
sDNA/sdna_vs2008/CMake/: MSVC.cmake
sDNA/sdna_vs2008/tests/: correctout.txt  correctout_table.txt  debug_test.py  run_debug_test.bat
sDNA/sdnacomwrapper/: Calculation.cpp  Calculation.h  SDNAWindow.cpp  SDNAWindow.h  SpatialNet.cpp  SpatialNet.h  dllmain.cpp  dllmain.h  globalwindow.cpp  globalwindow.h  sdnacomwrapper.cpp  sdnacomwrapper.idl  stdafx.cpp  stdafx.h  targetver.h  utils.cpp  utils.h
